examples/timer/cpp_bindings/my_timer.hpp

#define NIMFFI_RET_OK 0
#define NIMFFI_RET_ERR 1
#define NIMFFI_RET_TIMEOUT 4
#define NIMFFI_RET_CLOSED 5
#define NIMFFI_RET_INVALID_CTX 6
#define NIMFFI_RET_BUSY 7
typedef struct {
  uint32_t struct_size;   /* sizeof(NimFfiMsg) of the library; fields are only appended */
  uint32_t kind;          /* NIMFFI_MSG_* */
  uint64_t seq;           /* production order within the context */
  uint64_t id;            /* REPLY, STALE_WARN: the request id. Otherwise 0 */
  uint64_t name_id;       /* EVENT: which one. Otherwise 0 */
  uint64_t aux;
  int32_t  ret_code;
  uint32_t flags;
  const uint8_t* payload; /* bare CBOR value; never NULL */
  size_t   len;
} NimFfiMsg;
#define NIMFFI_MSG_REPLY 1  /* id is the request; ret_code OK: payload is its CBOR, ERR: UTF-8 text */
#define NIMFFI_MSG_STALE_WARN 3  /* request id is still running after aux ms; its REPLY still comes */
#define NIMFFI_MSG_EVENT 2  /* name_id names it; payload is its CBOR */
#define NIMFFI_MSG_NOT_RESPONDING 5  /* aux is a NIMFFI_NOT_RESPONDING_* reason */
#define NIMFFI_MSG_RESPONDING 6  /* the FFI thread's heartbeat resumed */
#define NIMFFI_MSG_CLOSED 7  /* the context is gone; every later poll fails */
#define NIMFFI_NOT_RESPONDING_HEARTBEAT 1
#define NIMFFI_NOT_RESPONDING_EVENT_QUEUE_FULL 2
/**
 * A request returns as soon as it is queued. NIMFFI_RET_OK promises exactly one
 * NIMFFI_MSG_REPLY out of `<lib>_poll` whose `id` is `*req_id_out`, unless the
 * context closes first; the reply can be polled before the request call returns.
 * Any other return means no reply will come; `<lib>_last_error` says why.
 * A reply's `ret_code` is NIMFFI_RET_OK and its payload the CBOR return value, or
 * NIMFFI_RET_ERR and its payload UTF-8 error text.
 * The constructor sets `*ctx_out` at once, so it can be polled; whether the
 * construction worked is the reply `*req_id_out` on it. After a NIMFFI_RET_ERR
 * reply the context is still claimed and must be destroyed.
 * The context class below does all of this: one typed method per request.
 */

/** Creates the FFIContext + MyTimer; async via chronos. */
int my_timer_create(const uint8_t* req_cbor, size_t req_cbor_len, void** ctx_out, uint64_t* req_id_out);
/** Sleeps `delayMs` then echoes the message back, firing `on_echo_fired`. */
int my_timer_echo(void* ctx, const uint8_t* req_cbor, size_t req_cbor_len, uint64_t* req_id_out);
/** Returns the library's version string. */
int my_timer_version(void* ctx, const uint8_t* req_cbor, size_t req_cbor_len, uint64_t* req_id_out);
int my_timer_lib_version(const uint8_t* req_cbor, size_t req_cbor_len, uint64_t* req_id_out);
int my_timer_complex(void* ctx, const uint8_t* req_cbor, size_t req_cbor_len, uint64_t* req_id_out);
/** Three object-typed params (`job`, `retry`, `schedule`) packed into one CBOR envelope. */
int my_timer_schedule(void* ctx, const uint8_t* req_cbor, size_t req_cbor_len, uint64_t* req_id_out);
/** Tears down the FFI context; blocks until FFI + watchdog threads join. */
int my_timer_destroy(void* ctx);
/** The context the replies of the static procs arrive on; NULL on failure. */
void* my_timer_static_ctx(void);
/** Why the last request of the calling thread was refused. Never NULL. */
const char* my_timer_last_error(void);
/**
 * Take the next message of `ctx` out, waiting up to `timeout_ms` (0 never
 * blocks, negative waits until a message or the end of the context).
 * NIMFFI_RET_OK: `*msg` is set. The message and its payload belong to the library
 * and stay valid until the next poll on `ctx`.
 * NIMFFI_RET_TIMEOUT: nothing arrived in time.
 * NIMFFI_RET_CLOSED: the context ended; `*msg` is a NIMFFI_MSG_CLOSED whose
 * `ret_code` is NIMFFI_RET_OK, or NIMFFI_RET_ERR with the reason as UTF-8 payload.
 * NIMFFI_RET_INVALID_CTX: `ctx` names no live context.
 * NIMFFI_RET_BUSY: another thread is polling `ctx`; there is one consumer at a time.
 * The context class below already polls from its dispatch thread.
 */
int my_timer_poll(void* ctx, int32_t timeout_ms, const NimFfiMsg** msg);
/**
 * A handle that is ready while a message waits or `ctx` is closed: an epoll fd
 * on Linux, a kqueue fd on macOS/BSD, an Event HANDLE on Windows, -1 on failure.
 * The caller owns it and closes it. Wait on it, then poll with a timeout of 0
 * until NIMFFI_RET_TIMEOUT.
 */
intptr_t my_timer_poll_fd(void* ctx);
/**
 * Stop every context the library still holds and join their threads.
 * Call it before the process exits when a context is still alive, or when a
 * static proc built the shared context.
 * Returns 0 when every context stopped, 1 when one was left running.
 */
int my_timer_shutdown(void);